--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,12 +1,12 @@
 [versions]
-activityCompose = "1.9.1"
+activityCompose = "1.10.1"
 agp = "8.5.2"
 hiltNavigationComposeVersion = "1.2.0"
 kotlin = "2.0.0"
-coreKtx = "1.9.1"
+coreKtx = "1.15.0"
 junit = "4.13.2"
-junitVersion = "1.1.5"
-espressoCore = "3.5.0"
+junitVersion = "1.2.1"
+espressoCore = "3.6.1"
 appcompat = "1.7.0"
 kotlinxCoroutinesAndroid = "1.8.0"
 lifecycleViewmodelCompose = "2.8.7"
@@ -22,10 +22,11 @@ roomCompiler = "2.6.1"
 roomKtx = "2.6.1"
 roomRuntime = "2.6.1"
 turbine = "1.0.0"
-composeBom = "2025.02.00"
+composeBom = "2025.03.00"
 coil = "2.4.0"
 coilCompose = "2.4.0"
 uiTestJunit4Android = "1.7.8"
+navigationCompose = "2.8.9"
 
 [libraries]
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activityCompose" }
@@ -47,7 +48,7 @@ dagger-hilt = { group = "com.google.dagger", name = "hilt-android", version.ref 
 dagger-hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hilt" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
 coil = { module = "io.coil-kt:coil", version.ref = "coil" }
-
+androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
 androidx-ui-test = { module = "androidx.compose.ui:ui-test" }
 androidx-ui-test-junit4 = { module = "androidx.compose.ui:ui-test-junit4" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
